2008-05-13  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  New version that calls host callbacks.

2008-05-12  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/dsplib.h:
	  Crosscompilation fixes.

2008-05-11  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/CSong.h:
	* src/BuzzMachineLoader/Makefile.am:
	* src/BuzzMachineLoader/dsplib.h:
	* src/bml.c:
	* src/bml.h:
	  Call host callback if its available.

2008-05-08  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Some info about cross compilations attempts.

	* TODO:
	  Update issue list.
  
	* dllwrapper1/wine/module.c:
	* dllwrapper1/wine/pe_image.c:
	* dllwrapper1/wine/win32.c:
	  Cache unavailable libs and shortcut next loading attempts. Speeds up
	  loading and make log reading easier.	

2008-04-27  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/BuzzMachineLoader/CMachine.h:
	* src/BuzzMachineLoader/CSong.h:
	* src/BuzzMachineLoader/Makefile.am:
	  Split sources and headers. Add CSong class needed fro wavtable.

2008-04-21  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineCallbacks.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacks.h:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.cpp:
	* src/BuzzMachineLoader/BuzzMachineCallbacksPre12.h:
	  Return default wavelevel for now. Add comment about auxbuffer size.
	  Also lower it back to 1K.
	
	* src/BuzzMachineLoader/BuzzMachineLoader.cpp: