@@ -43,8 +43,13 @@ result should go to a given directory (use date-time when not provided)
 unk__malloc_dbg
 from MSVCRTD.dll which I can't find
 
+= list missing machine for songs =
+for file in *.bmx; do ~/buzztard/bin/bt-cmd 2>/dev/null --command=info --input-file=$file | grep "  bml-"; done | sort | uniq -c | sort -n
+
+= list songs that have no missing machines =
+for file in *.bmx; do ~/buzztard/bin/bt-cmd 2>/dev/null --command=info --input-file=$file | grep -q "  bml-" || echo $file; done
+
 = missing features =
-* callbackinterface (wavetable access)
 * getting access to Patterns/Sequence
 
 = what windows dll to copy and which not =
@@ -85,19 +90,22 @@ Jeskola Tracker.dll
 
 Ruff SPECCY II.dll
 HD Percussive_FM.dll
-  crash after 
+  crash after ?
+  
+Aeguelles TB4004
+  noisy distortion
 
 == Effects ==
 Arguelles TruePan
 Jeskola Raverb
   BuzzMachineCallbacks::GetEnvSize (wave=-96185375,env=0)
   buzzmachinecallbackspre12.cpp:112:BuzzMachineCallbacksPre12::GetOscillatorTable (waveform=-128840458)
-Sonic Verb
+Sonic Verb (seems to work now)
   buzzmachinecallbacks.cpp:199:BuzzMachineCallbacks::GetEnvPoint (wave=-1,env=-1,i=-1076278224,&x,&y,&flags)
   buzzmachinecallbacks.cpp:276:BuzzMachineCallbacks::SetSequenceData (row=-1217504548,ppat=B7A5B3C4)
 FSM Infector
 cheapo spread.dll
-  hangs
+  hangs after GetInfo()
 Ynzn's Remote Compressor.dll
 Ynzn's Remote Gate.dll
   both crash (problem with name?)
